# WSL-Development-Stack-GLFW-Skia-CPP-Template

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  _config.yml  build.ps1  build.sh  index.md  start.sh
.github/: pull_request_template.md
Howtos/: CPPStyle-type-name-separation.md  VSC-AgentMode_lin.md  VSC-AgentMode_win.md  building_project.md  code-structure.md  setup_linux.agent.md  setup_linux.md  setup_win.md  setup_windows.agent-TODO.md
_layouts/: default_c.html
assets/css/: style.scss  styleprev.scss
cmake/: CMakeLists_Init-env.bat  linux.cmake  linux_utilities.cmake  windows.cmake
dependencies/win/: CMakeLists.txt
include/gui-control/: Folder_structure.MD  README.MD
include/gui-control/gui/glfw/: app_glfw.h  app_window.h
include/gui-control/gui/skia/: app_canvas.h  app_skia.h
source/: GUI-Control.code-workspace  main.cpp
source/core/: _README.MD
source/core/internal/: _README.MD  group-common-externals.h  os_platform.h
source/gui/app/: _README.MD
source/gui/glfw/: _README.MD  app_window.cpp
source/gui/glfw/internal/: WindowImpl.cpp  WindowImpl.h  _README.MD
source/gui/skia/: _README.MD
source/gui/skia/internal/: _README.md  group-skia_core.h  group-skia_gpu.h  skia_init.cpp  skia_init.h
src/: main.cpp  main_simple.cpp
